[tool.poetry]
name = "nbstool"
version = "1.2.0"
description = "A tool to work with .nbs (Note Block Studio) files."
authors = ["IoeCmcomc"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
Pillow = ">=9.0.0"
pygubu = ">=0.11, <0.24"
mido = ">=1.2.9"
lxml = ">=4.9.1"
lark = ">=1.0.0"
nbswave = "^0.3.0"
jsonschema = "^4.17.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pygubu-designer = "~0.28"
Nuitka = "^1.1.6"
orderedset = "^2.0.3"
zstandard = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
