[tool.poetry]
name = "nbstool"
version = "1.4.0"
description = "A tool to work with .nbs (Note Block Studio) files."
authors = ["IoeCmcomc"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
Pillow = ">=9.0.0"
pygubu = ">=0.23"
mido = ">=1.2.9"
lxml = ">=4.9.1"
lark = ">=1.0.0"
jsonschema = ">=4.17.3"
nbswave = {git = "https://github.com/Bentroen/nbswave.git"}
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pygubu-designer = ">=0.28"
# Latest version of Nuitka (2.3.1) produces a Linux executable which work fine
# on WSL but crash on an Ubuntu 24.04 VM. Therefore, nuitka will be set to
# version 1.8.5 for now. 
# Nuitka = ">=1.1.6"
Nuitka = "1.8.5"
orderedset = "^2.0.3"
zstandard = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
